<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.01"
        android:src="@drawable/startscreen"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerEcngCourses"/>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >
        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/takePhoto"
            android:id="@+id/btnTakePhoto" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/selectPhoto"
            android:id="@+id/btnSelectPhoto" />

    </TableRow>

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/selectDateTxt"
        android:id="@+id/selectDateTxtView"/>

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/dateTxt"
        android:id="@+id/dateTxtView"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/selectDate"
        android:id="@+id/btnSelectDate"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/uploadPhoto"
        android:id="@+id/btnUploadPhoto"/>

</LinearLayout>
